# neovim-nix-flake

./: .envrc  .gitignore  CLAUDE.md  DEFENDER_OPTIMIZATION.md  Dockerfile  README.md  flake.nix  justfile  plugins.nix  renovate.json  runtimeDeps.nix
.github/workflows/: build-and-cache.yaml  trigger-nix-config-update.yaml  update.yaml
colorschemes/ayu/: default.nix
colorschemes/bamboo/: default.nix
colorschemes/catppuccin/: default.nix
colorschemes/everforest/: default.nix
colorschemes/gruvbox/: default.nix
colorschemes/kanagawa-paper/: default.nix
colorschemes/melange/: default.nix
colorschemes/modus/: default.nix
colorschemes/monokai-pro/: default.nix
colorschemes/nightfox/: default.nix
colorschemes/nord/: default.nix
colorschemes/poimandres/: default.nix
colorschemes/rose-pine/: default.nix
colorschemes/tokyonight/: default.nix
colorschemes/vscode/: default.nix
config/: default.nix
config/lua/: nvim-telescope.lua
config/luanix/: nvim-lspconfig.lua.nix
config/vim/: nvim-settings.vim
ftplugin/: http.lua.nix
keymaps/ai/: default.nix
keymaps/buffers/: default.nix
keymaps/db/: default.nix
keymaps/debugging/: default.nix
keymaps/folding/: default.nix
keymaps/git/: default.nix
keymaps/gitlinker/: default.nix
lua/: terraform-search.lua  terraform-tools.lua
patches/: lspmux-accept-null-workspaceFolders.patch  lspmux-cache-diagnostics.patch  lspmux-lsp-compat.patch
tests/python/: .gitignore  flake.nix  justfile  main.py  noxfile.py  pyproject.toml  test_example.py  todo.md
tests/python/app/: main.py
(+120 files in other folders)
