[project]
name = "example-app"
version = "0.1.0"
description = "Example Python app"

# define any Python dependencies
dependencies = [
  "pytest>3",
]

# define the CLI executable
# Here, we define the entry point to be the 'main()' function in the module 'app/main.py'
[project.scripts]
cli = "app.main:main"
